tests/pass/array_1.crdm
fn main() {
    let arr1: [int] = [1, 2, 3];
}