tests/fail/function_2.crdm
fn test() {
    return 1;
}